# finx-reports-ib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  Reports.ipynb  cli.py  demo-opstrat.ipynb  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  testing.pnlreports.ipynb  weston.test.py
.chglog/: config.yml
.github/workflows/: ci.yml  docs.yml  release-please.yml
docs/: api.rst  conf.py  index.rst
docs/source/: api.rst  index.rst
finx_ib_reports/: adapters.py  custom_flex_report.py  date_helpers.py  download_trades.py  input_sources.py  reports.py
finx_reports_ib/: adapters.py  config_helpers.py  custom_flex_report.py  date_helpers.py  download_trades.py  transforms.py
ngv_ibkr_reports/: adapters.py  config_helpers.py  custom_flex_report.py  download_trades.py  transforms.py
notebooks/: ib.ipynb  report-categorize.ipynb
requirements/: requirements-dev.txt  requirements.txt
tests/: test_download_trades.py
